fix: ensure topic title truncates properly in flex container

--- a/scss/_topic-list.scss
+++ b/scss/_topic-list.scss
@@ -128,6 +128,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   display: block;
+  min-width: 0;
+  width: 100%;
   max-width: 100%;
 }
 
